--- a/index.html
+++ b/index.html
@@ -1,37 +1,28 @@
-## Welcome to GitHub Pages
-
-You can use the [editor on GitHub](https://github.com/noah-ann/princess.github.io/edit/gh-pages/index.md) to maintain and preview the content for your website in Markdown files.
-
-Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
-
-### Markdown
-
-Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for
-
-```markdown
-Syntax highlighted code block
-
-# Header 1
-## Header 2
-### Header 3
-
-- Bulleted
-- List
-
-1. Numbered
-2. List
-
-**Bold** and _Italic_ and `Code` text
-
-[Link](url) and ![Image](src)
-```
-
-For more details see [GitHub Flavored Markdown](https://guides.github.com/features/mastering-markdown/).
-
-### Jekyll Themes
-
-Your Pages site will use the layout and styles from the Jekyll theme you have selected in your [repository settings](https://github.com/noah-ann/princess.github.io/settings). The name of this theme is saved in the Jekyll `_config.yml` configuration file.
-
-### Support or Contact
-
-Having trouble with Pages? Check out our [documentation](https://docs.github.com/categories/github-pages-basics/) or [contact support](https://github.com/contact) and we’ll help you sort it out.
+<!DOCTYPE html>
+<html lang="zh-cn">
+  <head>
+	<meta charset="utf-8"/>
+	<title>生日快乐  公主殿下</title>
+	<link href="princess.css"rel="stylesheet"type="text/css"/>
+  </head>
+  <body>
+  	
+  	<div class="p1">
+  	<h1>一则童话家写给重要之人的生日童话</h1>
+    <p  class="ssd" style="font-size: 20px">祝你生日快乐，十八岁之后的生活，平安喜乐，万事顺意</p>
+</div>
+  	<div class="photo">
+  	<img src="princess.jpg" width="200" height="auto" alt="公主">
+    	<p></p>
+    <div class="photo-end"></div>
+</div>
+<div class="p2">
+	<img src="" width="188" height="auto" alt="">
+		
+	<div class="p2-end"></div>
+</div>
+<div class="p3">
+</div>	 
+<script type="text/javascript" src="noah.js "></script>
+   </body>
+   </html>
